--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
-project(untitled)
+project(MyCppNote)
 
 set(CMAKE_CXX_STANDARD 98)
 
-add_executable(untitled main.cpp Myclass.h stock00.cpp Myclass.cpp)
-add_executable(test  Codes/hello.cpp)
+add_executable(mainproject main.cpp Myclass.h stock00.cpp Myclass.cpp)
+add_executable(filetest Codes/filetest.cpp)
