--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(MyCppNote)
 
 set(CMAKE_CXX_STANDARD 98)
 
-add_executable(mainproject main.cpp Myclass.h stock00.cpp Myclass.cpp)
+add_executable(mainproject main.cpp Myclass.h stock00.cpp Myclass.cpp tabtenn0.h tabtenn0.cpp exc_mean.h)
 add_executable(filetest Codes/filetest.cpp)
