--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(mainproject main.cpp Myclass.h stock00.cpp Myclass.cpp tabtenn0.h
 add_executable(filetest Codes/filetest.cpp Codes/test_CPP.cpp Codes/LinkNode.cpp Codes/LinkNode.h Codes/Polynomial_add.cpp)
 add_executable(test_CPP Codes/test_CPP.cpp)
 add_executable(Polynomial_add Codes/Polynomial_add.cpp)
+add_executable(Joseph_ring Codes/Joseph_ring.cpp)
