--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(MyCppNote)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(mainproject main.cpp Myclass.h stock00.cpp Myclass.cpp tabtenn0.h tabtenn0.cpp exc_mean.h)
-add_executable(filetest Codes/filetest.cpp Codes/test_CPP.cpp Codes/LinkNode.cpp Codes/LinkNode.h Codes/Polynomial_add.cpp Codes/memory.cpp Codes/homework2_2.cpp Codes/homework2_3.cpp Codes/homework2_4.cpp)
+add_executable(filetest Codes/filetest.cpp)
 add_executable(test_CPP Codes/test_CPP.cpp)
 add_executable(Polynomial_add Codes/Polynomial_add.cpp)
 add_executable(Joseph_ring Codes/Joseph_ring.cpp)
@@ -12,3 +12,4 @@ add_executable(memory Codes/memory.cpp)
 add_executable(homework2_2 Codes/homework2_2.cpp)
 add_executable(homework2_3 Codes/homework2_3.cpp)
 add_executable(homework2_4 Codes/homework2_4.cpp)
+add_executable(MyStack Codes/MyStack.cpp)
