--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(homework2_2 Codes/homework2_2.cpp)
 add_executable(homework2_3 Codes/homework2_3.cpp)
 add_executable(homework2_4 Codes/homework2_4.cpp)
 add_executable(MyStack Codes/MyStack.cpp)
+add_executable(Myclass Myclass.cpp Myclass.h)
